; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_usb_serial.c_ucom_free.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_usb_serial.c_ucom_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucom_softc = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.ucom_softc*)* }

@ucom_mtx = common dso_local global i32 0, align 4
@ucom_close_refs = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ucom_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ucom_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ucom_softc*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.ucom_softc*
  store %struct.ucom_softc* %5, %struct.ucom_softc** %3, align 8
  %6 = load %struct.ucom_softc*, %struct.ucom_softc** %3, align 8
  %7 = getelementptr inbounds %struct.ucom_softc, %struct.ucom_softc* %6, i32 0, i32 1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32 (%struct.ucom_softc*)*, i32 (%struct.ucom_softc*)** %9, align 8
  %11 = icmp ne i32 (%struct.ucom_softc*)* %10, null
  br i1 %11, label %12, label %20

12:                                               ; preds = %1
  %13 = load %struct.ucom_softc*, %struct.ucom_softc** %3, align 8
  %14 = getelementptr inbounds %struct.ucom_softc, %struct.ucom_softc* %13, i32 0, i32 1
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32 (%struct.ucom_softc*)*, i32 (%struct.ucom_softc*)** %16, align 8
  %18 = load %struct.ucom_softc*, %struct.ucom_softc** %3, align 8
  %19 = call i32 %17(%struct.ucom_softc* %18)
  br label %25

20:                                               ; preds = %1
  %21 = load %struct.ucom_softc*, %struct.ucom_softc** %3, align 8
  %22 = getelementptr inbounds %struct.ucom_softc, %struct.ucom_softc* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = call i32 @ucom_unref(i32 %23)
  br label %25

25:                                               ; preds = %20, %12
  %26 = call i32 @mtx_lock(i32* @ucom_mtx)
  %27 = load i32, i32* @ucom_close_refs, align 4
  %28 = add nsw i32 %27, -1
  store i32 %28, i32* @ucom_close_refs, align 4
  %29 = call i32 @mtx_unlock(i32* @ucom_mtx)
  ret void
}

declare dso_local i32 @ucom_unref(i32) #1

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
